# flask_lab

./: pyproject.toml  requirements.txt
src/: server.py
