[tool.poetry]
name = "flask-lab"
version = "0.1.0"
description = "Flaks practice lab"
authors = ["NRSKhouw <nickr.setiawan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.2.2"
werkzeug = "2.2.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
python = "^3.9"
flask = "2.2.2"
werkzeug = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
